syntax = "proto3";

package calculator;

option go_package = "/proto/gen;mainpb";

service Calculator {
    rpc Add (AddRequest) returns (AddResponce); // Unary RPC
    rpc GenerateFibonacci(FibonacciRequest) returns (stream FibonacciResponse); // Server side stream
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponce {
    int32 sum = 1;
}

message FibonacciRequest {
    int32 n = 1; // Number of fibonacci numbers to generate
}

message FibonacciResponse  {
    int32 number = 1; // Indivuidual Fibonacci number
}